Fix missing illocution in skill examples.